Unnecessary libraries are unnecessary

--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -4,6 +4,7 @@ body {
     background-color: #121212;
     margin: 0px;
     text-align: center;
+    overflow-y: scroll;
 }
 
 h1 {
@@ -44,6 +45,7 @@ button {
     font-size: 40px;
     font-family: "Tomorrow", sans-serif;
     color: #bbbbbb;
+    cursor: pointer;
 }
 
 a:link,
