--- a/docs/stylesheets/music.css
+++ b/docs/stylesheets/music.css
@@ -15,6 +15,10 @@ h1 {
     padding-bottom: 20px;
 }
 
+.longNameH1 {
+    font-size: 105px;
+}
+
 h2 {
     font-size: 75px;
 }
@@ -44,6 +48,19 @@ table.songTable {
     border-color: #000000;
     box-shadow: 2px 2px 10px 2px #000000;
 
+}
+
+table.linksTable {
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    border-collapse: collapse;
+    background-color: #222222;
+    border-style: solid;
+    border-color: #000000;
+    box-shadow: 2px 2px 10px 2px #000000;
+    text-align: center;
 }
 
 p {
@@ -84,6 +101,13 @@ td#songDesc2.onSongPage {
 .otherLinks {
     margin-top: 10px;
     margin-bottom: 10px;
+}
+
+.tableLinks {
+    font-size: 40px;
+    width: 600px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 li {
@@ -168,6 +192,10 @@ button:hover {
         line-height: 22vw;
     }
 
+    .longNameH1 {
+        font-size: 9.5vw;
+    }
+
     h2 {
         font-size: 10vw;
         line-height: 10vw;
@@ -180,6 +208,11 @@ button:hover {
 
     p {
         font-size: 4vw;
+    }
+
+    .tableLinks {
+        font-size: 5vw;
+        width: 100%;
     }
 
     button {
