Music projects are now properly displayed in chronological order on index.html

--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -35,8 +35,13 @@ p {
     font-size: 30px;
 }
 
-li {
-    font-size: 30px;
+ul {
+    font-size: 35px;
+    text-align: left;
+}
+
+.subBullet {
+    font-size: 20px;
 }
 
 button {
