--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -69,29 +69,48 @@
                     href="https://www.youtube.com/channel/UCoJpTVMgEBnrF0KzaRZlklQ">YouTube</a> and <a
                     href="https://soundcloud.com/the-sass-music">SoundCloud</a>.</p>
             <p>Or, if you'd prefer, read about story behind each of my tracks (and download them too).</p>
-            <ul>
+            <table>
                 {% for item in chronological_list %}
                 {% if "songs" in item %}
-                <li>
-                    <a href="collections/{{ item.safeName }}.html">{{ item.name }}</a>
-                    <ul class="subBullet">
-                        {% for song in item.songs %}
-                        <li>
-                            <a href="songs/{{ song.safeName }}.html">{{ song.name }}</a>
-                        </li>
-                        {% endfor %}
-                    </ul>
-                </li>
+                <tr>
+                    <td class="itemNameLarge">
+                        <p class="itemNameLarge"><a href="collections/{{ item.safeName }}.html">{{ item.name }}</a></p>
+                        <ul class="songBullets">
+                            {% for song in item.songs %}
+                            <li>
+                                <a href="songs/{{ song.safeName }}.html">{{ song.name }}</a>
+                            </li>
+                            {% endfor %}
+                        </ul>
+                    </td>
+                    <td>
+                        <p id="cover"><a href="collections/{{ item.safeName }}.html"><img class="coverimg"
+                                    src="artwork/{{ item.coverLink }}" width="200" height="200"></a></p>
+                    </td>
+                </tr>
                 {% else %}
-                <li>
-                    <a href="songs/{{ item.safeName }}.html">{{ item.name }}</a>
-                </li>
+                <tr>
+                    <td class="itemNameLarge">
+                        <p class="itemNameLarge"><a href="songs/{{ item.safeName }}.html">{{ item.name }}</a></p>
+                        <p class="singleText">(Single)</p>
+                    </td>
+                    <td>
+                        <p id="cover"><a href="songs/{{ item.safeName }}.html"><img class="coverimg"
+                                    src="artwork/{{ item.coverLink }}" width="200" height="200"></a></p>
+                    </td>
+                </tr>
                 {% endif %}
                 {% endfor %}
-                <br>
-                <a href="https://github.com/NitroGuy10/nitroguy10.github.io/blob/master/data/song_data.json"
-                    class="json">JSON file with all song info</a>
-            </ul>
+                <tr>
+                    <td>
+                        <p class="json"><a
+                                href="https://github.com/NitroGuy10/nitroguy10.github.io/blob/master/data/song_data.json">
+                                JSON file with all song info</a></p>
+                    </td>
+                </tr>
+            </table>
+
+
         </div>
         <noscript>
             <hr class="noscript_hr">
@@ -122,37 +141,29 @@
     <script>
         const TABS = ["#about", "#music", "#other"]
 
-        function openTab(page, start)
-        {
-            if (location.hash === TABS[page] && !start)
-            {
+        function openTab(page, start) {
+            if (location.hash === TABS[page] && !start) {
                 /*location.hash = "#about"
                 location.reload()*/
                 return
             }
             location.hash = TABS[page]
-            for (let i = 0; i < TABS.length; i++)
-            {
-                if (i === page)
-                {
+            for (let i = 0; i < TABS.length; i++) {
+                if (i === page) {
                     document.getElementById(TABS[i].substring(1)).style.display = "block"
                 }
-                else
-                {
+                else {
                     document.getElementById(TABS[i].substring(1)).style.display = "none"
                 }
 
             }
         }
 
-        function start()
-        {
-            if (location.hash === "" || TABS.indexOf(location.hash) === -1)
-            {
+        function start() {
+            if (location.hash === "" || TABS.indexOf(location.hash) === -1) {
                 openTab(0, true)
             }
-            else
-            {
+            else {
                 openTab(TABS.indexOf(location.hash), true)
             }
         }
