--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -62,54 +62,57 @@
             <noscript>
                 <h2 class="noscript_heading">Music</h2>
             </noscript>
-            <img src="artwork/sass_tiny.png" id="monkey" align="right">
+            <img src="artwork/sass_tiny.png" id="musicLogo" align="right">
             <p>I produce EDM under the alias "The Sass". My music is all about emotion, fun, and taking the listener on
                 a journey. It's also chock-full of lead solos and major 7s lol.</p>
             <p>If you wanna have a listen, check me out on <a
                     href="https://www.youtube.com/channel/UCoJpTVMgEBnrF0KzaRZlklQ">YouTube</a> and <a
                     href="https://soundcloud.com/the-sass-music">SoundCloud</a>.</p>
             <p>Or, if you'd prefer, read about story behind each of my tracks (and download them too).</p>
-            <table>
-                {% for item in chronological_list %}
-                {% if "songs" in item %}
-                <tr>
-                    <td class="itemNameLarge">
-                        <p class="itemNameLarge"><a href="collections/{{ item.safeName }}.html">{{ item.name }}</a></p>
-                        <ul class="songBullets">
-                            {% for song in item.songs %}
-                            <li>
-                                <a href="songs/{{ song.safeName }}.html">{{ song.name }}</a>
-                            </li>
-                            {% endfor %}
-                        </ul>
-                    </td>
-                    <td>
-                        <p id="cover"><a href="collections/{{ item.safeName }}.html"><img class="coverimg"
-                                    src="artwork/{{ item.coverLink }}" width="200" height="200"></a></p>
-                    </td>
-                </tr>
-                {% else %}
-                <tr>
-                    <td class="itemNameLarge">
-                        <p class="itemNameLarge"><a href="songs/{{ item.safeName }}.html">{{ item.name }}</a></p>
-                        <p class="singleText">(Single)</p>
-                    </td>
-                    <td>
-                        <p id="cover"><a href="songs/{{ item.safeName }}.html"><img class="coverimg"
-                                    src="artwork/{{ item.coverLink }}" width="200" height="200"></a></p>
-                    </td>
-                </tr>
-                {% endif %}
-                {% endfor %}
-                <tr>
-                    <td>
-                        <p class="json"><a
-                                href="https://github.com/NitroGuy10/nitroguy10.github.io/blob/master/data/song_data.json">
-                                JSON file with all song info</a></p>
-                    </td>
-                </tr>
-            </table>
-
+            <noscript><div class="scrollTable"></noscript>
+                <table>
+                    {% for item in chronological_list %}
+                    {% if "songs" in item %}
+                    <tr>
+                        <td class="itemNameLarge">
+                            <p class="itemNameLarge"><a href="collections/{{ item.safeName }}.html">{{ item.name }}</a>
+                            </p>
+                            <ul class="songBullets">
+                                {% for song in item.songs %}
+                                <li>
+                                    <a href="songs/{{ song.safeName }}.html">{{ song.name }}</a>
+                                </li>
+                                {% endfor %}
+                            </ul>
+                        </td>
+                        <td>
+                            <p id="cover"><a href="collections/{{ item.safeName }}.html"><img class="coverimg"
+                                        src="artwork/{{ item.coverLink }}" width="200" height="200"></a></p>
+                        </td>
+                    </tr>
+                    {% else %}
+                    <tr>
+                        <td class="itemNameLarge">
+                            <p class="itemNameLarge"><a href="songs/{{ item.safeName }}.html">{{ item.name }}</a></p>
+                            <p class="singleText">(Single)</p>
+                        </td>
+                        <td>
+                            <p id="cover"><a href="songs/{{ item.safeName }}.html"><img class="coverimg"
+                                        src="artwork/{{ item.coverLink }}" width="200" height="200"></a></p>
+                        </td>
+                    </tr>
+                    {% endif %}
+                    {% endfor %}
+                    <tr>
+                        <td>
+                            <p class="json"><a
+                                    href="https://github.com/NitroGuy10/nitroguy10.github.io/blob/master/data/song_data.json">
+                                    JSON file with all song info</a></p>
+                        </td>
+                        <td></td>
+                    </tr>
+                </table>
+            <noscript></div></noscript>
 
         </div>
         <noscript>
