Tiny change to the navigation buttons

--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -62,6 +62,10 @@ button {
     cursor: pointer;
 }
 
+button.current {
+    background-color: #171717;
+}
+
 table {
     width: 100%;
     border-collapse: collapse;
