--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -105,7 +105,7 @@
                     {% endfor %}
                     <tr>
                         <td>
-                            <p class="json"><a
+                            <p id="json"><a
                                     href="https://github.com/NitroGuy10/nitroguy10.github.io/blob/master/data/song_data.json">
                                     JSON file with all song info</a></p>
                         </td>
