--- a/docs/stylesheets/main_sass.css
+++ b/docs/stylesheets/main_sass.css
@@ -18,4 +18,115 @@ h1.long-name {
   font-size: 120px;
 }
 
+.noscript-heading {
+  font-size: 60px;
+  line-height: 20px;
+  margin: 0px;
+  padding-bottom: 20px;
+  text-align: center;
+}
+
+p {
+  font-size: 30px;
+}
+
+a:link, a:visited {
+  color: #00aaff;
+}
+a.white-link {
+  color: inherit;
+}
+
+.item-name-large {
+  font-size: 50px;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.single-text {
+  font-size: 25px;
+  color: #666;
+}
+
+#json {
+  font-size: 25px;
+  text-align: center;
+}
+
+#email {
+  font-size: 12px;
+}
+
+#copyright {
+  padding-top: 15px;
+  padding-bottom: 3px;
+}
+
+ul {
+  font-size: 35px;
+  text-align: left;
+}
+ul.song-bullets {
+  font-size: 20px;
+  text-align: center;
+}
+ul.song-bullets li {
+  padding-bottom: 8px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+td {
+  font-size: 30px;
+  vertical-align: top;
+  border-top: 1px solid #444444;
+}
+
+.scroll-table {
+  overflow-y: scroll;
+  height: 800px;
+  background-color: #1A1A1A;
+  border: 1px solid #dddddd;
+}
+
+#music-logo {
+  padding-left: 30px;
+}
+
+.noscript-hr {
+  margin-bottom: 40px;
+}
+
+button {
+  background-color: #252525;
+  border: none;
+  padding: 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 40px;
+  font-family: "Tomorrow", sans-serif;
+  color: #bbbbbb;
+  cursor: pointer;
+}
+button:hover {
+  background-color: #171717;
+}
+button.current {
+  background-color: #171717;
+}
+
+#games, #other {
+  text-align: center;
+}
+
+#content {
+  text-align: justify;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
 /*# sourceMappingURL=main_sass.css.map */
